--- a/index.html
+++ b/index.html
@@ -376,25 +376,25 @@
                         <!-- IMAGE & VIDEO COLLAGE -->
                         <div class="grid grid-cols-2 md:grid-cols-4 gap-2 mb-12 rounded-xl overflow-hidden shadow-2xl">
                             <div class="col-span-2 row-span-2 bg-[#111] flex items-center justify-center relative">
-                                <!-- VIDEO TAG: Change 'path/to/your/video.mp4' to your actual file path (e.g., 'C:/Users/aryan/Desktop/pendant_video.mp4') -->
+                                <!-- VIDEO TAG -->
                                 <video 
-                                    src="C:/Users/aryan/Videos/Screen Recordings/Screen Recording 2026-02-02 140725.mp4" 
+                                    src="pendant_video.mp4" 
                                     class="w-full h-full object-cover" 
                                     autoplay loop muted playsinline>
                                 </video>
                                 <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent pointer-events-none"></div>
                             </div>
                             <div class="col-span-1">
-                                <img src="C:/Users/aryan/.gemini/antigravity/brain/d422f614-c084-41ca-b906-ab721fdc73d8/uploaded_media_0_1770020997471.png" alt="PCB Layout 1" class="w-full h-full object-cover">
+                                <img src="pendant_img0.png" alt="PCB Layout 1" class="w-full h-full object-cover">
                             </div>
                             <div class="col-span-1">
-                                <img src="C:/Users/aryan/.gemini/antigravity/brain/d422f614-c084-41ca-b906-ab721fdc73d8/uploaded_media_1_1770020997471.png" alt="PCB Rendering 1" class="w-full h-full object-cover">
+                                <img src="pendant_img1.png" alt="PCB Rendering 1" class="w-full h-full object-cover">
                             </div>
                             <div class="col-span-1">
-                                <img src="C:/Users/aryan/.gemini/antigravity/brain/d422f614-c084-41ca-b906-ab721fdc73d8/uploaded_media_2_1770020997471.png" alt="PCB Layout 2" class="w-full h-full object-cover">
+                                <img src="pendant_img2.png" alt="PCB Layout 2" class="w-full h-full object-cover">
                             </div>
                             <div class="col-span-1">
-                                <img src="C:/Users/aryan/.gemini/antigravity/brain/d422f614-c084-41ca-b906-ab721fdc73d8/uploaded_media_3_1770020997471.png" alt="PCB Rendering 2" class="w-full h-full object-cover">
+                                <img src="pendant_img3.png" alt="PCB Rendering 2" class="w-full h-full object-cover">
                             </div>
                         </div>
 
@@ -425,7 +425,7 @@
                         <h3 class="text-2xl font-bold mb-6 text-white border-b border-white/10 pb-2">Electronics That Behave Like Jewelry</h3>
                         <p class="mb-8">A pendant is worn, not mounted. That changes everything. Heat dissipation, weight balance, visual symmetry, and comfort suddenly matter as much as clock speed and pin count. FlowPendant is proof that a PCB doesn’t have to hide behind plastic. It can be expressive. It can tell a story. It can simulate something as complex and organic as fluid motion—using nothing but copper, silicon, and light.</p>
                     `,
-                    image: "C:/Users/aryan/.gemini/antigravity/brain/d422f614-c084-41ca-b906-ab721fdc73d8/uploaded_media_4_1770020997471.png"
+                    image: "pendant_img0.png"
                 },
                 {
                     title: "Neon Dreams",
